k8s/app_javascript/service.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-time-app-js-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: moscow-time-app-js-deployment
