k8s/app_javascript/services.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-tz-js-service
spec:
  selector:
    app: moscow-tz-js
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
